# aoc2021

./: Cargo.toml  index.html  package-lock.json  package.json  rollup.config.js  rollup.config.node.js  rollup.config.web.js  tsconfig.json
css/: code.css  github-dark.css  katex.css  monokai-sublime.css  xmas.css
desc/: day01.tex  day02.tex  day03.tex  day04.tex  day05.tex  day06.tex  day07.tex  day08.tex  day09.tex  day10.tex  day11.tex  day12.tex  day13.tex
js/: day01.js  day02.js  day03.js  day04.js  day05.js  day06.js  day07.js  day08.js  day09.js  day10.js  day11.js  day12.js  day13.js  day13_bg.js  day13_bg.wasm  day14.js  day14_bg.wasm  day15.js  day15_bg.wasm  day16.js  day16_bg.wasm  day17.js  day17_bg.wasm  load.js  nodebase.js  webbase.js
rs/: day13.rs
rs/day13/: Cargo.toml  day13.rs
rs/day14/: Cargo.toml  day14.rs
rs/day15/: Cargo.toml  day15.rs
rs/day16/: Cargo.toml  day16.rs
rs/day17/: Cargo.toml  day17.rs
ts/: base.ts  day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  load.ts  nodebase.ts  webbase.ts
