[package]
name = "AOC"
version = "0.1.0"
authors = ["Bernhard Kerbl"]
edition = "2021"

[lib]
name = "day16"
path = "day16.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "day16"
path = "day16.rs"

[dependencies]
wasm-bindgen = "0.2.63"
num_enum = "0.5.4"
num-traits = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"